Nutriments, Types order, day shift fix, style, refactoring

--- a/phonegap/www/less/index.less
+++ b/phonegap/www/less/index.less
@@ -9,8 +9,9 @@ html, body {
 }
 
 h1 {
-  font-size: 48px;
-  text-align: center;
+	font-size: 48px;
+	text-align: center;
+	margin: 30px 0;
 }
 
 #container {
@@ -26,7 +27,7 @@ h1 {
 		}
 
 		.menu {
-			padding: 10px;
+			padding: 20px 0;
 		}
 
 		#menus {
@@ -34,8 +35,15 @@ h1 {
 				&:not(:first-child) {
 					border-top: 1px solid black;
 				}
-				
-				.aliment {
+
+				#aliments {
+					.aliment {
+
+					}
+				}
+			
+				#votes {
+					float: right;
 				}
 			}
 		}
@@ -44,4 +52,12 @@ h1 {
 
 .panel-title {
 	font-size: 30px;
+}
+
+.panel-body {
+	padding: 0 20px;
+}
+
+.modal-backdrop {
+	bottom: 0; // Bootstrap bug fix
 }
